[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpllayout"
description = "Easily create axes layouts for complex matplotlib figures."
authors = [{ name = "Guangyu Li", email = "gl343@cornell.edu" }]
license = { text = "GNU General Public License v3" }
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Operating System :: OS Independent",
]
dependencies = ["matplotlib>=3.4.0"]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/lguangyu/MatplotlibLayout.git"
"Bug Tracker" = "https://github.com/lguangyu/MatplotlibLayout/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mpllayout.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.pytest]
testpaths = ["tests"]
