[metadata]
name = mpllayout
description = Easily create axes layout on matplotlib figure
long_description = file: README.md
version = attr: mpllayout.__version__
author = "Guangyu Li"
author_email = "gl343@cornell.edu"
license = GNU General Public License v3
classifiers =
	License :: OSI Approved :: GNU General Public License v3
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
